# LandPrice

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: DATA_SOURCES.md  DATA_SPEC.md  METHODOLOGY.md  SETUP_WINDOWS.md  index.html  map.html
docs/qgis/: QGIS_사용법.md  parquet_to_csv.py  시도_공시지가_1990-2026.geojson
docs/summary_data/: 시군구별_공시지가_1990-2026.csv  시도별_공시지가_1990-2026.csv
scripts/: 01_download_bjd_codes.py  02_download_seoul_bulk.py  03_convert_seoul.py  04_sweep_vworld_api.py  05_validate.py  06_convert_vworld_bulk.py  07_refetch_conflicts.py  08_merge_windows.py  09_conflict_census.py  10_dedup_vworld.py  11_stats_for_viz.py  12_map_data.py  15_build_qgis_layers.py  probe_api.py  receive_server.py  run_sweep.ps1  run_sweep.sh  status.py
src/landprice/: __init__.py  bjd.py  config.py  seoul.py  storage.py  vworld.py
